# AgenticAI

3_crew/coder/output/: code_and_output.txt
3_crew/coder/src/coder/config/: agents.yaml
3_crew/financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
3_crew/team_engineers/: README.md  pyproject.toml
3_crew/team_engineers/src/team_engineers/: crew.py  main.py
3_crew/team_engineers/src/team_engineers/config/: agents.yaml
