[project]
name = "team_engineers"
version = "0.1.0"
description = "team_engineers using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
team_engineers = "team_engineers.main:run"
run_crew = "team_engineers.main:run"
train = "team_engineers.main:train"
replay = "team_engineers.main:replay"
test = "team_engineers.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
